deploy: 7f4fc954ea7cf9639c60d8db64d693a6694d09c6

--- a/index.html
+++ b/index.html
@@ -2944,13 +2944,13 @@ handled by the kernel. Otherwise, use memory seeking or getting the address of
                                                                   
 
                                                                   
-     <li class='itemize'><a class='url' href='https://lwn.net/Articles/804849/'><span class='ectt-1000'>https://lwn.net/Articles/804849/</span></a>
+     <li class='itemize'><a href='https://lwn.net/Articles/804849/'>lwn.net - Cook: Security things in Linux v5.3</a>
      </li>
-     <li class='itemize'><a class='url' href='https://lwn.net/Articles/12211/'><span class='ectt-1000'>https://lwn.net/Articles/12211/</span></a>
+     <li class='itemize'><a href='https://lwn.net/Articles/12211/'>lwn.net - Unexporting the system call table</a>
      </li>
-     <li class='itemize'><a class='url' href='https://lwn.net/Articles/813350/'><span class='ectt-1000'>https://lwn.net/Articles/813350/</span></a>
+     <li class='itemize'><a href='https://lwn.net/Articles/813350/'>lwn.net - Unexporting kallsyms_lookup_name()</a>
      </li>
-     <li class='itemize'><a class='url' href='https://www.kernel.org/doc/Documentation/kprobes.txt'><span class='ectt-1000'>https://www.kernel.org/doc/Documentation/kprobes.txt</span></a></li></ul>
+     <li class='itemize'><a href='https://www.kernel.org/doc/Documentation/kprobes.txt'>kernel.org - Kernel Probes (Kprobes)</a></li></ul>
 <!-- l. 1235 --><p class='indent'>   The source code here is an example of such a kernel module. We want to “spy” on a certain
 user, and to <code>  <span class='ectt-1000'>pr_info()</span>
 </code> a message whenever that user opens a file. Towards this end, we
