deploy: 99db320c4499f976dac49982a36c13c51e6c7b5f

--- a/index.html
+++ b/index.html
@@ -3146,7 +3146,7 @@ hand apply the patch.
 <a id='x1-40152r55'></a><span class='ecrm-0500'>55</span><span id='textcolor1392'><span class='ectt-0800'>#define HAVE_PARAM 1</span></span> 
 <a id='x1-40154r56'></a><span class='ecrm-0500'>56</span><span id='textcolor1393'><span class='ectt-0800'>#include</span></span><span class='ectt-0800'> </span><span id='textcolor1394'><span class='ectt-0800'>&lt;linux/kallsyms.h&gt; /* For sprint_symbol */</span></span> 
 <a id='x1-40156r57'></a><span class='ecrm-0500'>57</span><span id='textcolor1395'><span class='ectt-0800'>/* The address of the sys_call_table, which can be obtained with searching</span></span> 
-<a id='x1-40158r58'></a><span class='ecrm-0500'>58</span><span id='textcolor1396'><span class='ectt-0800'> * "/boot/System.map" or "/proc/kallsyms". When the kernel version is &gt;= 5.7,</span></span> 
+<a id='x1-40158r58'></a><span class='ecrm-0500'>58</span><span id='textcolor1396'><span class='ectt-0800'> * "/boot/System.map" or "/proc/kallsyms". When the kernel version is v5.7+,</span></span> 
 <a id='x1-40160r59'></a><span class='ecrm-0500'>59</span><span id='textcolor1397'><span class='ectt-0800'> * without CONFIG_KPROBES, you can input the parameter or the module will search</span></span> 
 <a id='x1-40162r60'></a><span class='ecrm-0500'>60</span><span id='textcolor1398'><span class='ectt-0800'> * all the memory.</span></span> 
 <a id='x1-40164r61'></a><span class='ecrm-0500'>61</span><span id='textcolor1399'><span class='ectt-0800'> */</span></span> 
