--- a/lkmpg-for-ht.html
+++ b/lkmpg-for-ht.html
@@ -1413,10 +1413,10 @@ acknowledging that we received it.
 to the same memory may lead to the race condition, and will not preserve the
 performance. In the kernel module, this problem may happen due to multiple
 instances accessing the shared resources. Therefore, a solution is to enforce the
-exclusive access. Atomic Compare-And-Swap (CAS) is used, it check out the file
-is currently open by someone. CAS will atomically compare the contents
-of the object with the expected value and, if they are the same, modifies
-the object into the desired value. See more concurrency detail in the <a href='#avoiding-collisions-and-deadlocks'>12<!-- tex4ht:ref: sec:synchronization  --></a>
+exclusive access. We use the Compare-And-Swap (CAS), the single atomic operation,
+to checks out whether the file is currently open by someone. CAS compares the
+content of the target with the expected value and, if they are the same, modifies
+the content to the desired value. See more concurrency details in the <a href='#avoiding-collisions-and-deadlocks'>12<!-- tex4ht:ref: sec:synchronization  --></a>
 section.
 </p><!-- l. 1 --><p class='indent'>
 </p>
@@ -4115,7 +4115,7 @@ codes. Implementing the atomic types by C11 atomics may allow the kernel to thro
 away the architecture-specific codes and letting the kernel code be more friendly to
 the people who understand the standard. But there are some problems, such as the
 memory model of the kernel doesn’t match the model formed by the C11 atomics.
-For further detail, see: </p>
+For further details, see: </p>
      <ul class='itemize1'>
      <li class='itemize'><a href='https://www.kernel.org/doc/Documentation/atomic_t.txt'>kernel documentation of atomic types</a>
      </li>
