deploy: 9b1a64160b8cbd72b934698046c8196ec9efab66

--- a/index.html
+++ b/index.html
@@ -4228,8 +4228,8 @@ immediate way to attract attention or to display a status condition. Keyboard LE
 are present on every hardware, they are always visible, they do not need any setup,
 and their use is rather simple and non-intrusive, compared to writing to a tty or a
 file.
-</p><!-- l. 1505 --><p class='indent'>   Since v4.14, the timer API started to change. The series of
-improvements ended up at v4.15. The older version had redundant
+</p><!-- l. 1505 --><p class='indent'>   Since v4.14, the timer API started to change for improving the memory safety.
+The series of improvements ended up at v4.15. The older version had redundant
 <code> <span class='ectt-1000'>data</span>
 </code> field in the <code>  <span class='ectt-1000'>timer_list</span>
 </code> structure. A buffer overflow in the area of a
